--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                     </ul>
                   </li>
                   <li cs-mega_menu">
-                    <a href="showcase-portfolio.html">Showcase</a>
+                    <a href="showcase.html">Showcase</a>
                   </li>
                 </ul>
               </div>
