--- a/cache-pages/blog.html
+++ b/cache-pages/blog.html
@@ -46,10 +46,10 @@
                             <a href="index.html">Main Home</a>
                           </li>
                           <li>
-                            <a href="showcase-portfolio.html" class="cs-nav_list_img">
+                            <a href="showcase.html" class="cs-nav_list_img">
                               <img src="assets/img/demo/showcase.jpeg" alt="" />
                             </a>
-                            <a href="showcase-portfolio.html">Showcase Portfolio</a>
+                            <a href="showcase.html">Showcase Portfolio</a>
                           </li>
                         </ul>
                       </li>
@@ -264,15 +264,15 @@
     </div>
     <!-- End Header Section -->
     <!-- Start Hero -->
-    <div class="cs-page_heading cs-style1 cs-center text-center cs-bg" data-src="assets/img/blog_details_hero_bg.jpeg">
+    <div class="cs-page_heading cs-style1 cs-center text-center cs-bg" data-src="assets/img/blog_hero_bg.jpeg">
       <div class="container">
         <div class="cs-page_heading_in">
-          <h1 class="cs-page_title cs-font_50 cs-white_color">Blog Single</h1>
+          <h1 class="cs-page_title cs-font_50 cs-white_color">Our Blog</h1>
           <ol class="breadcrumb text-uppercase">
             <li class="breadcrumb-item">
               <a href="index.html">Home</a>
             </li>
-            <li class="breadcrumb-item active">Blog Single</li>
+            <li class="breadcrumb-item active">Blog</li>
           </ol>
         </div>
       </div>
@@ -285,69 +285,92 @@
         <div class="row">
           <div class="col-lg-8">
             <div class="cs-post cs-style2">
-              <div class="cs-post_thumb cs-radius_15">
-                <img src="assets/img/post_5.jpeg" alt="Post" class="w-100 cs-radius_15">
-              </div>
+              <a href="blog-details.html" class="cs-post_thumb cs-radius_15">
+                <img src="assets/img/post_4.jpeg" alt="Post" class="w-100 cs-radius_15">
+              </a>
               <div class="cs-post_info">
                 <div class="cs-post_meta cs-style1 cs-ternary_color cs-semi_bold cs-primary_font">
                   <span class="cs-posted_by">07 Mar 2022</span>
                   <a href="#" class="cs-post_avatar">Tech</a>
                 </div>
-                <h2 class="cs-post_title">Creative studio programm coming soon</h2>
-                <p>Elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Tortor posuere ac ut consequat semper viverra nam libero justo. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien et. Aliquam purus sit amet luctus venenatis lectus magna fringilla urna. Purus sit amet luctus venenatis lectus. Nunc aliquet bibendum enim facilisis. Pretium viverra suspendisse potenti nullam ac tortor vitae.</p>
-                <blockquote class="cs-primary_font"> But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, who expound the actual teachings of the great explorer of the truth, the master. <small>Loren Mulari</small>
-                </blockquote>
-                <p>On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated.</p>
-                <div class="row">
-                  <div class="col-md-6">
-                    <img src="assets/img/blog_details_img_1.jpeg" alt="Blog Details" class="cs-radius_15 w-100">
-                    <div class="cs-height_45 cs-height_lg_45"></div>
-                  </div>
-                  <div class="col-md-6">
-                    <img src="assets/img/blog_details_img_2.jpeg" alt="Blog Details" class="cs-radius_15 w-100">
-                    <div class="cs-height_45 cs-height_lg_45"></div>
-                  </div>
-                </div>
-                <h3>Art is powerful and imaginary source</h3>
-                <p>we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances.</p>
-                <p>So, blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain amount of people.</p>
+                <h2 class="cs-post_title">
+                  <a href="#">A.I will take all human job within next year</a>
+                </h2>
+                <div class="cs-post_sub_title">Elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Tortor posuere ac ut consequat semper viverra nam libero justo. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien et. Aliquam purus sit amet luctus venenatis lectus magna fringilla urna. Purus sit amet luctus venenatis lectus. Nunc aliquet bibendum enim facilisis. Pretium viverra suspendisse potenti nullam ac tortor vitae.</div>
+                <a href="blog-details.html" class="cs-text_btn">
+                  <span>See More</span>
+                  <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M25.5307 6.53033C25.8236 6.23744 25.8236 5.76256 25.5307 5.46967L20.7577 0.696699C20.4648 0.403806 19.99 0.403806 19.6971 0.696699C19.4042 0.989593 19.4042 1.46447 19.6971 1.75736L23.9397 6L19.6971 10.2426C19.4042 10.5355 19.4042 11.0104 19.6971 11.3033C19.99 11.5962 20.4648 11.5962 20.7577 11.3033L25.5307 6.53033ZM0.000366211 6.75H25.0004V5.25H0.000366211V6.75Z" fill="currentColor" />
+                  </svg>
+                </a>
               </div>
             </div>
-            <div class="cs-height_30 cs-height_lg_30"></div>
-            <h2 class="cs-font_50 cs-m0">Leave A Reply</h2>
-            <div class="cs-height_5 cs-height_lg_5"></div>
-            <p class="cs-m0">Your email address will not be published. Required fields are marked *</p>
-            <div class="cs-height_40 cs-height_lg_30"></div>
-            <form action="#" class="row">
-              <div class="col-lg-6">
-                <label>Full Name*</label>
-                <input type="text" class="cs-form_field">
-                <div class="cs-height_20 cs-height_lg_20"></div>
-              </div>
-              <div class="col-lg-6">
-                <label>Email*</label>
-                <input type="text" class="cs-form_field">
-                <div class="cs-height_20 cs-height_lg_20"></div>
-              </div>
-              <div class="col-lg-12">
-                <label>Website*</label>
-                <input type="text" class="cs-form_field">
-                <div class="cs-height_20 cs-height_lg_20"></div>
-              </div>
-              <div class="col-lg-12">
-                <label>Write Your Comment*</label>
-                <textarea cols="30" rows="7" class="cs-form_field"></textarea>
-                <div class="cs-height_25 cs-height_lg_25"></div>
-              </div>
-              <div class="col-lg-12">
-                <button class="cs-btn cs-style1">
-                  <span>Send Message</span>
+            <div class="cs-height_95 cs-height_lg_60"></div>
+            <div class="cs-post cs-style2">
+              <a href="blog-details.html" class="cs-post_thumb cs-radius_15">
+                <img src="assets/img/post_5.jpeg" alt="Post" class="w-100 cs-radius_15">
+              </a>
+              <div class="cs-post_info">
+                <div class="cs-post_meta cs-style1 cs-ternary_color cs-semi_bold cs-primary_font">
+                  <span class="cs-posted_by">07 Mar 2022</span>
+                  <a href="#" class="cs-post_avatar">Tech</a>
+                </div>
+                <h2 class="cs-post_title">
+                  <a href="#">Creative studio programm coming soon</a>
+                </h2>
+                <div class="cs-post_sub_title">Elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Tortor posuere ac ut consequat semper viverra nam libero justo. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien et. Aliquam purus sit amet luctus venenatis lectus magna fringilla urna. Purus sit amet luctus venenatis lectus. Nunc aliquet bibendum enim facilisis. Pretium viverra suspendisse potenti nullam ac tortor vitae.</div>
+                <a href="blog-details.html" class="cs-text_btn">
+                  <span>See More</span>
                   <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M25.5303 6.53033C25.8232 6.23744 25.8232 5.76256 25.5303 5.46967L20.7574 0.696699C20.4645 0.403806 19.9896 0.403806 19.6967 0.696699C19.4038 0.989593 19.4038 1.46447 19.6967 1.75736L23.9393 6L19.6967 10.2426C19.4038 10.5355 19.4038 11.0104 19.6967 11.3033C19.9896 11.5962 20.4645 11.5962 20.7574 11.3033L25.5303 6.53033ZM0 6.75H25V5.25H0V6.75Z" fill="currentColor" />
+                    <path d="M25.5307 6.53033C25.8236 6.23744 25.8236 5.76256 25.5307 5.46967L20.7577 0.696699C20.4648 0.403806 19.99 0.403806 19.6971 0.696699C19.4042 0.989593 19.4042 1.46447 19.6971 1.75736L23.9397 6L19.6971 10.2426C19.4042 10.5355 19.4042 11.0104 19.6971 11.3033C19.99 11.5962 20.4648 11.5962 20.7577 11.3033L25.5307 6.53033ZM0.000366211 6.75H25.0004V5.25H0.000366211V6.75Z" fill="currentColor" />
                   </svg>
-                </button>
+                </a>
               </div>
-            </form>
+            </div>
+            <div class="cs-height_95 cs-height_lg_60"></div>
+            <div class="cs-post cs-style2">
+              <a href="blog-details.html" class="cs-post_thumb cs-radius_15">
+                <img src="assets/img/post_6.jpeg" alt="Post" class="w-100 cs-radius_15">
+              </a>
+              <div class="cs-post_info">
+                <div class="cs-post_meta cs-style1 cs-ternary_color cs-semi_bold cs-primary_font">
+                  <span class="cs-posted_by">07 Mar 2022</span>
+                  <a href="#" class="cs-post_avatar">Tech</a>
+                </div>
+                <h2 class="cs-post_title">
+                  <a href="#">Artistic mind will be great for creation</a>
+                </h2>
+                <div class="cs-post_sub_title">Elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi tristique. Tortor posuere ac ut consequat semper viverra nam libero justo. Mauris commodo quis imperdiet massa tincidunt nunc pulvinar sapien et. Aliquam purus sit amet luctus venenatis lectus magna fringilla urna. Purus sit amet luctus venenatis lectus. Nunc aliquet bibendum enim facilisis. Pretium viverra suspendisse potenti nullam ac tortor vitae.</div>
+                <a href="blog-details.html" class="cs-text_btn">
+                  <span>See More</span>
+                  <svg width="26" height="12" viewBox="0 0 26 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M25.5307 6.53033C25.8236 6.23744 25.8236 5.76256 25.5307 5.46967L20.7577 0.696699C20.4648 0.403806 19.99 0.403806 19.6971 0.696699C19.4042 0.989593 19.4042 1.46447 19.6971 1.75736L23.9397 6L19.6971 10.2426C19.4042 10.5355 19.4042 11.0104 19.6971 11.3033C19.99 11.5962 20.4648 11.5962 20.7577 11.3033L25.5307 6.53033ZM0.000366211 6.75H25.0004V5.25H0.000366211V6.75Z" fill="currentColor" />
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="cs-height_60 cs-height_lg_40"></div>
+            <ul class="cs-pagination_box cs-center cs-white_color cs-mp0 cs-semi_bold">
+              <li>
+                <a class="cs-pagination_item cs-center active" href="blog.html">1</a>
+              </li>
+              <li>
+                <a class="cs-pagination_item cs-center" href="blog.html">2</a>
+              </li>
+              <li>
+                <a class="cs-pagination_item cs-center" href="blog.html">3</a>
+              </li>
+              <li>
+                <a class="cs-pagination_item cs-center" href="blog.html">4</a>
+              </li>
+              <li>
+                <a href="#" class="cs-pagination_item cs-center">
+                  <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M0 1.272L4.55116 6L0 10.728L1.22442 12L7 6L1.22442 0L0 1.272Z" fill="currentColor" />
+                  </svg>
+                </a>
+              </li>
+            </ul>
           </div>
           <div class="col-xl-3 col-lg-4 offset-xl-1">
             <div class="cs-height_0 cs-height_lg_80"></div>
