--- a/showcase.html
+++ b/showcase.html
@@ -51,7 +51,7 @@
                       <a href="portfolio-details.html">Portfolio Details</a>
                     </li>
                     <li>
-                      <a href="showcase-portfolio.html">Showcase</a>
+                      <a href="showcase.html">Showcase</a>
                     </li>
                   </ul>
                 </li>
