--- a/cache-pages/freelancer-agency.html
+++ b/cache-pages/freelancer-agency.html
@@ -46,10 +46,10 @@
                             <a href="index.html">Main Home</a>
                           </li>
                           <li>
-                            <a href="showcase-portfolio.html" class="cs-nav_list_img">
+                            <a href="showcase.html" class="cs-nav_list_img">
                               <img src="assets/img/demo/showcase.jpeg" alt="" />
                             </a>
-                            <a href="showcase-portfolio.html">Showcase Portfolio</a>
+                            <a href="showcase.html">Showcase Portfolio</a>
                           </li>
                         </ul>
                       </li>
