--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     </ul>
                   </li>
                   <li cs-mega_menu">
-                    <a href="showcase-portfolio.html">Showcase</a>
+                    <a href="showcase.html">Showcase</a>
                   </li>
                 </ul>
               </div>
