--- a/showcase.html
+++ b/showcase.html
@@ -70,51 +70,31 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <div class="cs-hero cs-style4">
-            <a href="case-study.html" class="cs-hero_link"></a>
-            <figure class="cs-swiper_parallax_bg" data-src="assets/img/slider_1.jpeg"><img src="assets/img/slider_1.jpeg" alt="Slider" class="cs-entity_img"></figure>
+            <a href="mff.html" class="cs-hero_link"></a>
+            <figure class="cs-swiper_parallax_bg" data-src="assets/portfolio/MFF/LANDSCAPE.png"><img src="assets/portfolio/MFF/LANDSCAPE.png" alt="Slider" class="cs-entity_img"></figure>
             <div class="cs-hero_text">
-              <h2 class="cs-hero_title"><span>Think reality</span></h2>
-              <h2 class="cs-hero_title"><span>do positive</span></h2>
+              <h2 class="cs-hero_title"><span>Minna</span></h2>
+              <h2 class="cs-hero_title"><span>Food Festival</span></h2>
             </div>
           </div>
         </div>
         <div class="swiper-slide">
           <div class="cs-hero cs-style4">
-            <a href="case-study.html" class="cs-hero_link"></a>
-            <figure class="cs-swiper_parallax_bg" data-src="assets/img/slider_2.jpeg"><img src="assets/img/slider_2.jpeg" alt="Slider" class="cs-entity_img"></figure>
+            <a href="reedwears.html" class="cs-hero_link"></a>
+            <figure class="cs-swiper_parallax_bg" data-src="assets/portfolio/REED/REED1.png"><img src="assets/portfolio/REED/REED1.png" alt="Slider" class="cs-entity_img"></figure>
             <div class="cs-hero_text">
-              <h2 class="cs-hero_title"><span>Think reality</span></h2>
-              <h2 class="cs-hero_title"><span>do positive</span></h2>
+              <h2 class="cs-hero_title"><span>Reed Wears</span></h2>
+              <h2 class="cs-hero_title"><span>Branding</span></h2>
             </div>
           </div>
         </div>
         <div class="swiper-slide">
           <div class="cs-hero cs-style4">
-            <a href="case-study.html" class="cs-hero_link"></a>
-            <figure class="cs-swiper_parallax_bg" data-src="assets/img/slider_3.jpeg"><img src="assets/img/slider_3.jpeg" alt="Slider" class="cs-entity_img"></figure>
+            <a href="itesify.html" class="cs-hero_link"></a>
+            <figure class="cs-swiper_parallax_bg" data-src="assets/portfolio/ITC/ItestifyClothing&printArtboard4.jpg"><img src="assets/portfolio/ITC/ItestifyClothing&printArtboard4.jpg" alt="Slider" class="cs-entity_img"></figure>
             <div class="cs-hero_text">
-              <h2 class="cs-hero_title"><span>Think reality</span></h2>
-              <h2 class="cs-hero_title"><span>do positive</span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="cs-hero cs-style4">
-            <a href="case-study.html" class="cs-hero_link"></a>
-            <figure class="cs-swiper_parallax_bg" data-src="assets/img/slider_4.jpeg"><img src="assets/img/slider_4.jpeg" alt="Slider" class="cs-entity_img"></figure>
-            <div class="cs-hero_text">
-              <h2 class="cs-hero_title"><span>Think reality</span></h2>
-              <h2 class="cs-hero_title"><span>do positive</span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <div class="cs-hero cs-style4">
-            <a href="case-study.html" class="cs-hero_link"></a>
-            <figure class="cs-swiper_parallax_bg" data-src="assets/img/slider_4.jpeg"><img src="assets/img/slider_4.jpeg" alt="Slider" class="cs-entity_img"></figure>
-            <div class="cs-hero_text">
-              <h2 class="cs-hero_title"><span>Think reality</span></h2>
-              <h2 class="cs-hero_title"><span>do positive</span></h2>
+              <h2 class="cs-hero_title"><span>Itesify</span></h2>
+              <h2 class="cs-hero_title"><span>Product Branding</span></h2>
             </div>
           </div>
         </div>
