--- a/index.html
+++ b/index.html
@@ -488,8 +488,7 @@
                   </div>
                 </div>
               </div>
-              <!-- UNCOMMENT FOR EXTRA TEAM MEMBERS  -->
-              <!-- <div class="cs-slide">
+              <div class="cs-slide">
                 <div class="cs-team cs-style1">
                   <div class="cs-member_thumb">
                     <img src="assets/img/member_1.jpeg" alt="Member" />
@@ -524,7 +523,8 @@
                     </a>
                   </div>
                 </div>
-              </div> -->
+              </div>
+              <!-- UNCOMMENT FOR EXTRA TEAM MEMBERS  -->
               <!-- .cs-slide -->
               <!-- <div class="cs-slide">
                 <div class="cs-team cs-style1">
