--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <div class="cs-shape_1"></div>
       <div class="cs-shape_1"></div>
       <div class="container">
-        <div class="cs-hero_text">
+        <div class="cs-hero_text cs-hero_home">
           <h1 class="cs-hero_title wow fadeInRight" data-wow-duration="0.8s" data-wow-delay="0.2s"> Creating the business <br />you dream of </h1>
           <div class="cs-hero_info">
             <div>
@@ -206,7 +206,7 @@
               </div>
               <div class="cs-funfact cs-style1">
                 <div class="cs-funfact_number cs-primary_font cs-semi_bold cs-primary_color">
-                  <span data-count-to="3" class="odometer"></span>
+                  <span data-count-to="4" class="odometer"></span>
                 </div>
                 <div class="cs-funfact_text">
                   <!-- <span class="cs-accent_color">+</span> -->
